added nuget packages and add references

--- a/src/SocialMedia-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
+++ b/src/SocialMedia-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CQRS-EventSource\CQRS.Core\CQRS.Core.csproj" />
+    <ProjectReference Include="..\Post.Query.Domain\Post.Query.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
