--- a/src/SocialMedia-Post/Post.Command/Post.Command.Api/Post.Command.Api.csproj
+++ b/src/SocialMedia-Post/Post.Command/Post.Command.Api/Post.Command.Api.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CQRS-EventSource\CQRS.Core\CQRS.Core.csproj" />
+    <ProjectReference Include="..\..\Post.Common\Post.Common.csproj" />
+    <ProjectReference Include="..\Post.Command.Domain\Post.Command.Domain.csproj" />
+    <ProjectReference Include="..\Post.Command.Infrastructure\Post.Command.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
