--- a/src/SocialMedia-Post/Post.Command/Post.Command.Infrastructure/Post.Command.Infrastructure.csproj
+++ b/src/SocialMedia-Post/Post.Command/Post.Command.Infrastructure/Post.Command.Infrastructure.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CQRS-EventSource\CQRS.Core\CQRS.Core.csproj" />
+    <ProjectReference Include="..\Post.Command.Domain\Post.Command.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
