--- a/src/SocialMedia-Post/Post.Common/Post.Common.csproj
+++ b/src/SocialMedia-Post/Post.Common/Post.Common.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+    <ProjectReference Include="..\..\CQRS-EventSource\CQRS.Core\CQRS.Core.csproj" />
   </ItemGroup>
 
 </Project>
