--- a/src/SocialMedia-Post/Post.Query/Post.Query.Api/Post.Query.Api.csproj
+++ b/src/SocialMedia-Post/Post.Query/Post.Query.Api/Post.Query.Api.csproj
@@ -16,4 +16,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CQRS-EventSource\CQRS.Core\CQRS.Core.csproj" />
+    <ProjectReference Include="..\..\Post.Common\Post.Common.csproj" />
+    <ProjectReference Include="..\Post.Query.Domain\Post.Query.Domain.csproj" />
+    <ProjectReference Include="..\Post.Query.Infrastructure\Post.Query.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
