--- a/src/SocialMedia-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
+++ b/src/SocialMedia-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
